# SyntheticVG

./: .gitignore  README.md  predict.py  pyproject.toml
som/: .gitignore  compress_seg.py  environment.yml  get_uncovered_regions_som.py  merge_som_proposals.py  misc.py  sam_inference.py  som_inference.py
som/task_adapter/sam/tasks/: automatic_mask_generator.py  inference_sam_m2m_auto.py
som/task_adapter/seem/tasks/: inference_seem_pano.py
som/task_adapter/semantic_sam/tasks/: inference_semsam_m2m_auto.py
som/task_adapter/utils/: detection.py  visualizer.py
svg/: __init__.py  constants.py  conversation.py  draw_utils.py  file_utils.py  mm_utils.py  openai_utils.py  parallel_utils.py  utils.py
svg/datasets/: cot_sg.py  cot_text.py  data_modules.py  flickr.py  llava.py  llava_one_vision.py  multi_region.py  osprey_724k.py  point_qa.py  prompts.py  psg.py  refexp.py  sg.py  sg_detection.py  stage2_data.py  vcr.py  vg.py  vsr.py
svg/model/: __init__.py  consolidate.py  layer.py  robin_arch.py
svg/model/language_model/: osprey_llama.py  osprey_mistral.py  robin_qwen.py
svg/model/multimodal_encoder/: clip.py  clip_encoder.py
svg/pipeline/: preprocessing.py  robin.py  utils.py
svg/pipeline/captioning/: __init__.py  gpt4o.py  robin.py
svg/pipeline/grounding/: __init__.py  grounding_dino.py
svg/pipeline/region_proposal/: region_generator.py  sam.py
svg/train/: svg_trainer.py  train.py  train_mem.py
